# rpi-pico-mpu6050

./: CMakeLists.txt
src/: main.c
